--- a/src/output.css
+++ b/src/output.css
@@ -554,22 +554,6 @@ video {
   display: none;
 }
 
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
-}
-
-.static {
-  position: static;
-}
-
 .fixed {
   position: fixed;
 }
@@ -580,14 +564,6 @@ video {
 
 .relative {
   position: relative;
-}
-
-.-inset-1\.5 {
-  inset: -0.375rem;
-}
-
-.inset-auto {
-  inset: auto;
 }
 
 .inset-y-0 {
@@ -603,6 +579,10 @@ video {
   right: 0px;
 }
 
+.right-12 {
+  right: 3rem;
+}
+
 .top-0 {
   top: 0px;
 }
@@ -611,52 +591,12 @@ video {
   top: 5rem;
 }
 
+.top-3 {
+  top: 0.75rem;
+}
+
 .top-\[calc\(50\%-27px\)\] {
   top: calc(50% - 27px);
-}
-
-.start-0 {
-  inset-inline-start: 0px;
-}
-
-.top-1\/2 {
-  top: 50%;
-}
-
-.top-\[1\/2\] {
-  top: 1/2;
-}
-
-.top-\[c1\/2\] {
-  top: c1/2;
-}
-
-.top-\[calc1\/2\] {
-  top: calc1/2;
-}
-
-.top-\[calc\(\)1\/2\] {
-  top: calc()1/2;
-}
-
-.right-8 {
-  right: 2rem;
-}
-
-.right-14 {
-  right: 3.5rem;
-}
-
-.right-12 {
-  right: 3rem;
-}
-
-.top-\[20px\] {
-  top: 20px;
-}
-
-.top-5 {
-  top: 1.25rem;
 }
 
 .z-20 {
@@ -667,9 +607,38 @@ video {
   grid-column: span 6 / span 6;
 }
 
+.col-span-4 {
+  grid-column: span 4 / span 4;
+}
+
+.col-span-8 {
+  grid-column: span 8 / span 8;
+}
+
+.row-span-5 {
+  grid-row: span 5 / span 5;
+}
+
+.row-span-6 {
+  grid-row: span 6 / span 6;
+}
+
+.row-span-7 {
+  grid-row: span 7 / span 7;
+}
+
+.row-span-4 {
+  grid-row: span 4 / span 4;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .mb-10 {
@@ -690,22 +659,6 @@ video {
 
 .mb-6 {
   margin-bottom: 1.5rem;
-}
-
-.ml-6 {
-  margin-left: 1.5rem;
-}
-
-.ms-5 {
-  margin-inline-start: 1.25rem;
-}
-
-.me-5 {
-  margin-inline-end: 1.25rem;
-}
-
-.me-3 {
-  margin-inline-end: 0.75rem;
 }
 
 .block {
@@ -741,12 +694,16 @@ video {
   height: 0.25rem;
 }
 
-.h-20 {
-  height: 5rem;
+.h-10 {
+  height: 2.5rem;
 }
 
-.h-6 {
-  height: 1.5rem;
+.h-16 {
+  height: 4rem;
+}
+
+.h-7 {
+  height: 1.75rem;
 }
 
 .h-8 {
@@ -767,6 +724,14 @@ video {
 
 .h-\[30\%\] {
   height: 30%;
+}
+
+.h-\[300px\] {
+  height: 300px;
+}
+
+.h-\[400px\] {
+  height: 400px;
 }
 
 .h-\[45\%\] {
@@ -805,28 +770,64 @@ video {
   height: 100vh;
 }
 
-.h-7 {
-  height: 1.75rem;
+.h-\[100px\] {
+  height: 100px;
 }
 
-.h-9 {
-  height: 2.25rem;
+.h-\[500px\] {
+  height: 500px;
 }
 
-.h-10 {
-  height: 2.5rem;
+.h-\[200px\] {
+  height: 200px;
+}
+
+.h-\[80px\] {
+  height: 80px;
+}
+
+.h-\[40px\] {
+  height: 40px;
+}
+
+.h-\[250px\] {
+  height: 250px;
+}
+
+.h-\[20px\] {
+  height: 20px;
+}
+
+.max-h-\[100px\] {
+  max-height: 100px;
 }
 
 .max-h-\[400px\] {
   max-height: 400px;
 }
 
-.w-14 {
-  width: 3.5rem;
+.max-h-\[500px\] {
+  max-height: 500px;
 }
 
-.w-6 {
-  width: 1.5rem;
+.max-h-\[80px\] {
+  max-height: 80px;
+}
+
+.max-h-\[40px\] {
+  max-height: 40px;
+}
+
+.min-h-screen {
+  min-height: 100vh;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-14 {
+  width: 3.5rem;
 }
 
 .w-\[20\%\] {
@@ -853,28 +854,16 @@ video {
   width: 100vw;
 }
 
-.w-7 {
-  width: 1.75rem;
-}
-
-.w-8 {
-  width: 2rem;
-}
-
-.w-9 {
-  width: 2.25rem;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.max-w-7xl {
-  max-width: 80rem;
+.max-w-6xl {
+  max-width: 72rem;
 }
 
 .max-w-full {
   max-width: 100%;
+}
+
+.max-w-\[40px\] {
+  max-width: 40px;
 }
 
 .flex-1 {
@@ -907,16 +896,24 @@ video {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-cols-8 {
+  grid-template-columns: repeat(8, minmax(0, 1fr));
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
 .flex-col {
   flex-direction: column;
 }
 
 .items-center {
   align-items: center;
-}
-
-.justify-end {
-  justify-content: flex-end;
 }
 
 .justify-center {
@@ -960,6 +957,36 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
+.space-x-5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-10 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
+.space-y-0 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0px * var(--tw-space-y-reverse));
+}
+
+.space-y-5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}
+
 .overflow-x-hidden {
   overflow-x: hidden;
 }
@@ -993,36 +1020,32 @@ video {
   background-color: rgb(245 245 245 / var(--tw-bg-opacity, 1));
 }
 
-.bg-rose-300 {
+.bg-subPurple {
   --tw-bg-opacity: 1;
-  background-color: rgb(253 164 175 / var(--tw-bg-opacity, 1));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  background-color: rgb(140 171 251 / var(--tw-bg-opacity, 1));
 }
 
 .bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
 }
 
-.bg-subPurple {
+.bg-gray-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(140 171 251 / var(--tw-bg-opacity, 1));
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity, 1));
 }
 
-.bg-mainYellow {
+.bg-sky-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(212 251 113 / var(--tw-bg-opacity, 1));
+  background-color: rgb(56 189 248 / var(--tw-bg-opacity, 1));
+}
+
+.bg-orange-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 146 60 / var(--tw-bg-opacity, 1));
 }
 
 .bg-banner {
   background-image: url('./img/banner.png');
-}
-
-.bg-main-1-bg {
-  background-image: url('./img/main-1-bg.png');
 }
 
 .bg-main-2-bg {
@@ -1045,6 +1068,10 @@ video {
   background-image: url('./img/main-7-bg.png');
 }
 
+.bg-main-1-bg {
+  background-image: url('./img/main-1-bg.png');
+}
+
 .bg-cover {
   background-size: cover;
 }
@@ -1058,12 +1085,20 @@ video {
      object-fit: cover;
 }
 
-.p-1 {
-  padding: 0.25rem;
-}
-
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-20 {
+  padding: 5rem;
+}
+
+.p-8 {
+  padding: 2rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .px-2 {
@@ -1098,10 +1133,6 @@ video {
   padding-left: 0.75rem;
 }
 
-.pr-2 {
-  padding-right: 0.5rem;
-}
-
 .pr-4 {
   padding-right: 1rem;
 }
@@ -1124,10 +1155,6 @@ video {
 
 .pt-\[6\%\] {
   padding-top: 6%;
-}
-
-.pr-0 {
-  padding-right: 0px;
 }
 
 .font-krona {
@@ -1170,14 +1197,14 @@ video {
   font-style: italic;
 }
 
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
-}
-
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity, 1));
 }
 
 .text-gray-900 {
@@ -1190,16 +1217,6 @@ video {
   color: rgb(245 245 245 / var(--tw-text-opacity, 1));
 }
 
-.text-rose-300 {
-  --tw-text-opacity: 1;
-  color: rgb(253 164 175 / var(--tw-text-opacity, 1));
-}
-
-.text-rose-400 {
-  --tw-text-opacity: 1;
-  color: rgb(251 113 133 / var(--tw-text-opacity, 1));
-}
-
 .text-mainYellow {
   --tw-text-opacity: 1;
   color: rgb(212 251 113 / var(--tw-text-opacity, 1));
@@ -1210,17 +1227,12 @@ video {
   color: rgb(140 171 251 / var(--tw-text-opacity, 1));
 }
 
-.text-gray-800 {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity, 1));
+.opacity-50 {
+  opacity: 0.5;
 }
 
 .opacity-80 {
   opacity: 0.8;
-}
-
-.opacity-50 {
-  opacity: 0.5;
 }
 
 .shadow {
@@ -1261,19 +1273,9 @@ video {
   border-radius: 0.75rem;
 }
 
-.hover\:border-rose-400:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(251 113 133 / var(--tw-border-opacity, 1));
-}
-
 .hover\:border-mainYellow:hover {
   --tw-border-opacity: 1;
   border-color: rgb(212 251 113 / var(--tw-border-opacity, 1));
-}
-
-.hover\:bg-gray-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-gray-50:hover {
@@ -1284,25 +1286,6 @@ video {
 .hover\:bg-lightGray:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 245 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-opacity-50:hover {
-  --tw-bg-opacity: 0.5;
-}
-
-.hover\:text-gray-500:hover {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
-}
-
-.hover\:text-rose-400:hover {
-  --tw-text-opacity: 1;
-  color: rgb(251 113 133 / var(--tw-text-opacity, 1));
-}
-
-.hover\:text-mainYellow:hover {
-  --tw-text-opacity: 1;
-  color: rgb(212 251 113 / var(--tw-text-opacity, 1));
 }
 
 .hover\:text-subPurple:hover {
@@ -1319,23 +1302,13 @@ video {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
 }
 
+.focus\:bg-lightGray:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity, 1));
+}
+
 .focus\:bg-opacity-90:focus {
   --tw-bg-opacity: 0.9;
-}
-
-.focus\:text-rose-400:focus {
-  --tw-text-opacity: 1;
-  color: rgb(251 113 133 / var(--tw-text-opacity, 1));
-}
-
-.focus\:text-mainYellow:focus {
-  --tw-text-opacity: 1;
-  color: rgb(212 251 113 / var(--tw-text-opacity, 1));
-}
-
-.focus\:text-subPurple:focus {
-  --tw-text-opacity: 1;
-  color: rgb(140 171 251 / var(--tw-text-opacity, 1));
 }
 
 .focus\:text-gray-800:focus {
@@ -1358,27 +1331,13 @@ video {
   --tw-ring-inset: inset;
 }
 
-.focus\:ring-rose-400:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(251 113 133 / var(--tw-ring-opacity, 1));
-}
-
 .focus\:ring-subPurple:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(140 171 251 / var(--tw-ring-opacity, 1));
 }
 
-.focus\:ring-offset-2:focus {
-  --tw-ring-offset-width: 2px;
-}
-
 .active\:bg-opacity-50:active {
   --tw-bg-opacity: 0.5;
-}
-
-.active\:text-rose-200:active {
-  --tw-text-opacity: 1;
-  color: rgb(254 205 211 / var(--tw-text-opacity, 1));
 }
 
 .active\:text-mainYellow:active {
@@ -1391,14 +1350,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:static {
-    position: static;
-  }
-
-  .sm\:inset-auto {
-    inset: auto;
-  }
-
   .sm\:ml-6 {
     margin-left: 1.5rem;
   }
@@ -1409,10 +1360,6 @@ video {
 
   .sm\:hidden {
     display: none;
-  }
-
-  .sm\:items-stretch {
-    align-items: stretch;
   }
 
   .sm\:justify-start {
@@ -1428,10 +1375,6 @@ video {
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
-  }
-
-  .sm\:pr-0 {
-    padding-right: 0px;
   }
 
   .sm\:text-\[100px\] {
@@ -1464,12 +1407,16 @@ video {
     height: 680px;
   }
 
+  .md\:h-\[700px\] {
+    height: 700px;
+  }
+
   .md\:max-h-\[600px\] {
     max-height: 600px;
   }
 
-  .md\:max-h-\[700px\] {
-    max-height: 700px;
+  .md\:w-16 {
+    width: 4rem;
   }
 
   .md\:w-\[60\%\] {
@@ -1478,10 +1425,6 @@ video {
 
   .md\:w-\[80\%\] {
     width: 80%;
-  }
-
-  .md\:w-16 {
-    width: 4rem;
   }
 
   .md\:space-y-4 > :not([hidden]) ~ :not([hidden]) {
@@ -1539,12 +1482,20 @@ video {
     top: 9rem;
   }
 
+  .lg\:top-5 {
+    top: 1.25rem;
+  }
+
   .lg\:block {
     display: block;
   }
 
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:h-20 {
+    height: 5rem;
   }
 
   .lg\:h-\[220px\] {
@@ -1555,20 +1506,48 @@ video {
     height: 35%;
   }
 
+  .lg\:h-\[500px\] {
+    height: 500px;
+  }
+
   .lg\:h-screen {
     height: 100vh;
+  }
+
+  .lg\:h-\[600px\] {
+    height: 600px;
+  }
+
+  .lg\:h-\[800px\] {
+    height: 800px;
+  }
+
+  .lg\:h-\[900px\] {
+    height: 900px;
+  }
+
+  .lg\:h-\[300px\] {
+    height: 300px;
   }
 
   .lg\:max-h-full {
     max-height: 100%;
   }
 
-  .lg\:w-2 {
-    width: 0.5rem;
+  .lg\:max-h-\[400px\] {
+    max-height: 400px;
+  }
+
+  .lg\:max-h-\[600px\] {
+    max-height: 600px;
   }
 
   .lg\:w-24 {
     width: 6rem;
+  }
+
+  .lg\:grid-cols-12 {
+    grid-template-columns: repeat(12, minmax(0, 1fr));
   }
 
   .lg\:items-center {
